// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Add Todo Default Add Todo 1`] = `
<div
  className="add-todo"
>
  <div
    className="add-todo-icon"
  />
  <input
    className="add-todo-input"
    onKeyPress={[Function]}
    placeholder="Add a new todo..."
  />
</div>
`;

exports[`Storyshots App Default Layout 1`] = `
<div
  className="App"
>
  <div
    className="add-todo"
  >
    <div
      className="add-todo-icon"
    />
    <input
      className="add-todo-input"
      onKeyPress={[Function]}
      placeholder="Add a new todo..."
    />
  </div>
</div>
`;

exports[`Storyshots Todo Item Checked Todo 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle fa-w-16 fa-sm "
    data-icon="circle"
    data-prefix="far"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <span
    className="todo-description"
  >
    Checked Todo
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-trash fa-w-14 fa-sm "
    data-icon="trash"
    data-prefix="fas"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Todo Item Default Todo 1`] = `
<div
  className="todo-item"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle fa-w-16 fa-sm "
    data-icon="circle"
    data-prefix="far"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <span
    className="todo-description"
  >
    Default Todo
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-trash fa-w-14 fa-sm "
    data-icon="trash"
    data-prefix="fas"
    focusable="false"
    onClick={[Function]}
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;
